# Fomula1_2026_Driver_Championship_Winner

./: .gitignore  main.py  pyproject.toml
data/: datapull.py
f1_cache/2026/2026-03-08_Australian_Grand_Prix/2026-03-08_Race/: driver_info.ff1pkl  lap_count.ff1pkl  race_control_messages.ff1pkl  session_status_data.ff1pkl  timing_app_data.ff1pkl  timing_data.ff1pkl  track_status_data.ff1pkl  weather_data.ff1pkl
